@startuml polimorfismo3
class Paleta {
  - sabor : str
  - precio : float
  + mostrarInformacion() : void
}

class PaletaAgua {
  - baseAgua : bool
  + mostrarBaseAgua() : void
}

class PaletaCrema {
  - cremosa : bool
  + mostrarTexturaCremosa() : void
}

Paleta <|-- PaletaAgua
Paleta <|-- PaletaCrema
@enduml
